--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "prepare": "yarn build",
-    "lint": "tslint  -t codeFrame 'src/**/*.ts' '__test__/**/*.ts'",
+    "lint": "eslint src/**/*.ts __tests__/**/*.ts",
     "release": "standard-version",
     "release:beta": "standard-version -p beta"
   },
@@ -43,8 +43,13 @@
   "devDependencies": {
     "@types/jest": "^23.3.12",
     "@types/node": "^10.12.18",
+    "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
     "commitizen": "^3.0.4",
     "cz-conventional-changelog": "2.1.0",
+    "eslint": "^5.15.1",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-problems": "^2.0.0",
     "husky": "^1.2.0",
     "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
@@ -58,9 +63,6 @@
     "rollup-plugin-typescript2": "^0.18.1",
     "standard-version": "^4.4.0",
     "ts-jest": "^23.10.5",
-    "tslint": "^5.12.1",
-    "tslint-config-airbnb": "^5.11.1",
-    "tslint-config-prettier": "^1.17.0",
     "typescript": "^3.2.2"
   },
   "config": {
