refactor(types): Improve type declaration of branch tag

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,5 +8,11 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "plugins": ["@typescript-eslint"]
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "@typescript-eslint/explicit-function-return-type": [
+      "error",
+      { "allowExpressions": true }
+    ]
+  }
 }
