--- a/package.json
+++ b/package.json
@@ -41,28 +41,29 @@
     "last 2 versions"
   ],
   "devDependencies": {
-    "@types/jest": "^23.3.12",
-    "@types/node": "^10.12.18",
-    "@typescript-eslint/eslint-plugin": "^1.4.2",
-    "@typescript-eslint/parser": "^1.4.2",
+    "@types/jest": "^24.0.13",
+    "@types/node": "^12.0.8",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
     "commitizen": "^3.0.4",
     "cz-conventional-changelog": "2.1.0",
     "eslint": "^5.15.1",
     "eslint-config-prettier": "^4.1.0",
-    "eslint-config-problems": "^2.0.0",
-    "husky": "^1.2.0",
-    "jest": "^23.6.0",
+    "eslint-config-problems": "^3.0.1",
+    "husky": "^2.4.1",
+    "jest": "^24.8.0",
+    "jest-environment-node": "^24.8.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.14.3",
-    "rollup": "^0.67.3",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup": "^1.15.1",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.0.1",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-terser": "^3.0.0",
-    "rollup-plugin-typescript2": "^0.18.1",
-    "standard-version": "^4.4.0",
-    "ts-jest": "^23.10.5",
+    "rollup-plugin-terser": "^5.0.0",
+    "rollup-plugin-typescript2": "^0.21.1",
+    "standard-version": "^6.0.1",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.2.2"
   },
   "config": {
