feat(lazy): Add lazyBound tag for recursive structures

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       { "allowExpressions": true }
-    ]
+    ],
+    "@typescript-eslint/no-parameter-properties": "off"
   }
 }
