--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.json"
+    "project": "./tsconfig-test.json"
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
