--- a/package.json
+++ b/package.json
@@ -41,30 +41,30 @@
     "last 2 versions"
   ],
   "devDependencies": {
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.2",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
+    "@rollup/plugin-commonjs": "^11.0.0",
+    "@rollup/plugin-json": "^4.0.1",
+    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-typescript": "^2.0.1",
+    "@types/jest": "^24.0.24",
+    "@types/node": "^13.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "3.0.2",
-    "eslint": "^6.2.2",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-config-problems": "^3.0.1",
-    "husky": "^3.0.4",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.8.0",
+    "husky": "^3.1.0",
     "jest": "^24.9.0",
     "jest-environment-node": "^24.9.0",
-    "lint-staged": "^9.2.5",
-    "prettier": "^1.14.3",
-    "rollup": "^1.20.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.0.1",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
+    "rollup": "^1.27.14",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-terser": "^5.0.0",
-    "rollup-plugin-typescript2": "^0.24.0",
-    "standard-version": "^7.0.0",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.6.2"
+    "rollup-plugin-terser": "^5.1.3",
+    "standard-version": "^7.0.1",
+    "ts-jest": "^24.2.0",
+    "tslib": "^1.10.0",
+    "typescript": "^3.7.4"
   },
   "config": {
     "commitizen": {
