--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "commit": "git add . && git-cz",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "prepare": "yarn build",
+    "prepare": "npm run build",
     "lint": "eslint ./src/*.ts ./src/**/*.ts ./__tests__/*.ts ./__tests__/**/*.ts",
     "release": "standard-version",
     "release:beta": "standard-version -p beta"
@@ -74,12 +74,12 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "pre-push": "yarn test"
+      "pre-push": "npm test"
     }
   },
   "lint-staged": {
     "*.ts": [
-      "yarn lint"
+      "npm run lint"
     ]
   }
 }
