--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "jest": "^24.9.0",
     "jest-environment-node": "^24.9.0",
     "lint-staged": "^9.5.0",
-    "prettier": "^1.19.1",
+    "prettier": "2.7.1",
     "rollup": "^1.27.14",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-terser": "^5.1.3",
