--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@rollup/plugin-json": "^4.0.1",
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@rollup/plugin-typescript": "^2.0.1",
-    "@types/jest": "^24.0.24",
+    "@types/jest": "^28.1.3",
     "@types/node": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
@@ -54,15 +54,15 @@
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
-    "jest": "^24.9.0",
-    "jest-environment-node": "^24.9.0",
+    "jest": "^28.1.1",
     "lint-staged": "^13.0.2",
     "prettier": "2.7.1",
     "rollup": "^1.27.14",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-terser": "^5.1.3",
     "standard-version": "^8.0.1",
-    "ts-jest": "^24.2.0",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
