--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@rollup/plugin-typescript": "^2.0.1",
     "@types/jest": "^28.1.3",
-    "@types/node": "^13.1.0",
+    "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
-    "commitizen": "^4.0.3",
-    "cz-conventional-changelog": "3.0.2",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
@@ -60,7 +60,7 @@
     "rollup": "^1.27.14",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-terser": "^5.1.3",
-    "standard-version": "^8.0.1",
+    "standard-version": "^9.5.0",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
